# Philote-Cpp

./: .gitignore  .hdoc.toml  CMakeLists.txt  README.md  README.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  build_grpc.yml
Philote/: CMakeLists.txt  array.h  array.hpp  chunk.h  discipline.h  discipline_client.h  discipline_server.h  discrete_array.h  discrete_array.hpp  explicit.h  explicit_client.h  explicit_client.hpp  explicit_server.h  explicit_server.hpp  implicit.h  implicit_client.h  implicit_client.hpp  implicit_server.h  options.h  partials.h  server_helpers.h  variable.h  variable_meta.h  variables.h
docs/: index.md
docs/pages/: Basic Discipline.md  Explicit Discipline.md  Implicit Discipline.md
examples/: CMakeLists.txt  parabaloid.cpp  paraboloid_client.cpp  paraboloid_server.cpp
examples/paraboloid/: CMakeLists.txt  paraboloid_client.cpp  paraboloid_server.cpp
examples/quadratic/: CMakeLists.txt  quadratic_client.cpp  quadratic_server.cpp
examples/rosenbrock/: CMakeLists.txt  rosenbrock_client.cpp  rosenbrock_server.cpp
include/: CMakeLists.txt  discipline.h  explicit.h  implicit.h  options.h  variable.h
include/Philote/: explicit.h  implicit.h
src/: CMakeLists.txt  array.cpp  discrete_array.cpp  explicit_client.cpp  implicit_client.cpp  implicit_server.cpp
src/discipline/: CMakeLists.txt  discipline.cpp  discipline_client.cpp  discipline_server.cpp
src/explicit/: CMakeLists.txt  explicit_client.cpp  explicit_discipline.cpp  explicit_server.cpp
src/general/: CMakeLists.txt  discipline_client.cpp  discipline_server.cpp  explicit_client.cpp  explicit_server.cpp  implicit_client.cpp  implicit_server.cpp  server_helpers.cpp
src/implicit/: CMakeLists.txt  implicit_client.cpp  implicit_discipline.cpp  implicit_server.cpp
src/utils/: CMakeLists.txt  array.cpp  chunk.cpp  discrete_array.cpp  partials.cpp  variable.cpp  variable_meta.cpp  variables.cpp
test/: CMakeLists.txt  array_tests.cpp  discipline_client_tests.cpp  discipline_server_tests.cpp  discipline_tests.cpp  discrete_array_tests.cpp  implicit_server_tests.cpp  variable_tests.cpp
